syntax = "proto3";

option go_package =".;proto";

// 定义输入消息，包含图片数据（这里假设为字节流形式）
message ImageInput {
    string image_input = 1;
}

// 定义输出消息，同样包含处理后的图片数据（字节流形式）
message ImageOutput {
    string image_output = 1;
}

// 定义gRPC服务
service ImageService {
    rpc ProcessImage(ImageInput) returns (ImageOutput);
}

